SONAR-11776 Quality Gate failure conditions should be sorted